Section title changed
Number of items per section removed.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>I make useless interactive stuff.</p>
 	</div>
     <div id="installations" class="section">
-        <h2><a class="section-title dropdown">03 × Playful installations [+]</a></h2>
+        <h2><a class="section-title dropdown">Playful installations [+]</a></h2>
 		<div class="section-content" style="display: none;">
 			<hr/>
 			
@@ -82,7 +82,7 @@
 		</div>
     </div>
 	<div id="apps-games" class="section">
-        <h2><a class="section-title dropdown">05 × Apps & games [+]</a></h2>
+        <h2><a class="section-title dropdown">Apps & games [+]</a></h2>
 		<div class="section-content" style="display: none;">
 			<hr/>		
 			
@@ -180,7 +180,7 @@
     </div>
 	
 	<div id="game-jams" class="section">
-        <h2><a class="section-title dropdown">14 × Game jams [+]</a></h2>
+        <h2><a class="section-title dropdown">Game jams [+]</a></h2>
 		<div class="section-content" style="display: none;">
 			<hr/>		
 			
