--- a/404.html
+++ b/404.html
@@ -5,13 +5,15 @@
 <meta charset="utf-8">
 <title>Error 404</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="container">
 	<div id="error404" class="section">
         <h1>Error 404</h1>
-        <p>Please go back to <a href="https://drnlab.net">https://drnlab.net</a>.</p>
+		<p><i class="bi bi-award-fill"></i> Congrats! You've found the error page.</p>
+        <p><i class="bi bi-link-45deg"></i> <a href="https://drnlab.net">https://drnlab.net</a>.</p>
 	</div>	
 </div>
 </body>
