Non-interactive section added

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 <div id="container">
 	<div id="error404" class="section">
         <h1>Error 404</h1>
-		<p><i class="bi bi-award-fill"></i> Congrats! You've found the error page.</p>
+		<p><i class="bi bi-award-fill"></i> Congrats! You've found an error page.</p>
         <p><i class="bi bi-link-45deg"></i> <a href="https://drnlab.net">https://drnlab.net</a>.</p>
 	</div>	
 </div>
