CSS load spinner added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<p>I make useless interactive stuff.</p>
 	</div>
     <div id="installations" class="section">
-        <h2><a class="dropdown-disabled">Playful installations <span class="dropdown-icon">[&#x29D6;]</span></a></h2>
+        <h2><a class="dropdown-disabled">Playful installations <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
 		<div class="content" style="display: none;">
 			<hr/><div id="mars-2050" class="item">
 				<h3>Mars 2050</h3>
@@ -62,7 +62,7 @@
 		</div>
     </div>
 	<div id="apps-games" class="section">
-        <h2><a class="dropdown-disabled">Apps & games <span class="dropdown-icon">[&#x29D6;]</span></a></h2>
+        <h2><a class="dropdown-disabled">Apps & games <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
 		<div class="content" style="display: none;">
 			<hr/><div class="item">
 				<h3>Bombarama</h3>
@@ -127,7 +127,7 @@
 		</div>
     </div>
 	<div id="tools" class="section">
-        <h2><a class="dropdown-disabled">Tools <span class="dropdown-icon">[&#x29D6;]</span></a></h2>
+        <h2><a class="dropdown-disabled">Tools <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
 		<div class="content" style="display: none;">
 			<hr/><div class="item">
 				<h3>YOLO</h3>
@@ -155,7 +155,7 @@
 		</div>
     </div>
 	<div id="game-jams" class="section">
-        <h2><a class="dropdown-disabled">Game jams <span class="dropdown-icon">[&#x29D6;]</span></a></h2>
+        <h2><a class="dropdown-disabled">Game jams <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
 		<div class="content" style="display: none;">
 			<hr/><div class="item">
 				<h3>Republic of Darkness</h3>
@@ -315,7 +315,7 @@
 		</div>
     </div>
 	<div id="education" class="section">
-        <h2><a class="dropdown-disabled">Education <span class="dropdown-icon">[&#x29D6;]</span></a></h2>
+        <h2><a class="dropdown-disabled">Education <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
 		<div class="content" style="display: none;">
 			<hr/><div class="item">
 				<h3>STEAM activities</h3>
@@ -332,7 +332,7 @@
 		</div>
     </div>
 	<div id="collabs" class="section">
-        <h2><a class="dropdown-disabled">Collabs <span class="dropdown-icon">[&#x29D6;]</span></a></h2>
+        <h2><a class="dropdown-disabled">Collabs <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
 		<div class="content" style="display: none;">
 			<hr/><div class="item">
 				<h3>3D printed figures + electronics</h3>
@@ -362,7 +362,7 @@
 		</div>
     </div>	
 	<div id="non-interactive" class="section">
-        <h2><a class="dropdown-disabled">Non-interactive <span class="dropdown-icon">[&#x29D6;]</span></a></h2>
+        <h2><a class="dropdown-disabled">Non-interactive <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
 		<div class="content" style="display: none;">
 			<hr/><div class="item">
 				<h3>Illustration</h3>
