--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link href="https://unpkg.com/flickity@2/dist/flickity.min.css" rel="stylesheet"/>
 <link href="style.css" rel="stylesheet"/>
+<link rel="icon" type="image/png" sizes="32x32" href="media/icon-32x32.png"/>
+<link rel="icon" type="image/png" sizes="196x196" href="media/icon-196x196.png"/>
+<link rel="apple-touch-icon" sizes="60x60" href="media/apple-touch-icon-60x60.png"/>
+<link rel="apple-touch-icon" sizes="76x76" href="media/apple-touch-icon-76x76.png"/>
+<link rel="apple-touch-icon" sizes="120x120" href="media/apple-touch-icon-120x120.png"/>
+<link rel="apple-touch-icon" sizes="152x152" href="media/apple-touch-icon-152x152.png"/>
 </head>
 <body>
 <div id="container">
