--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <title>Error 404</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-<link href="style.css" rel="stylesheet"/>
+<link href="https://drnlab.net/style.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="container">
