--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<p>I make useless interactive stuff.</p>
 	</div>
     <div id="installations" class="section">
-        <h2><a class="dropdown-disabled">Playful installations <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
+        <h2><a class="dropdown-disabled">Installations <span class="dropdown-icon">[<span class="loader"></span>]</span></a></h2>
 		<div class="content" style="display: none;">
 			<hr/><div id="mars-2050" class="item">
 				<h3>Mars 2050</h3>
@@ -326,7 +326,7 @@
 			<hr/><div class="item">
 				<h3>STEAM activities</h3>
 				
-				<p class="info">Design of STEAM activities about digital art, programming, videogames, electronics and robotics.</p>
+				<p class="info">Design of STEAM activities for kids about digital art, programming, videogames, electronics and robotics.</p>
 				<div class="details"><p><i class="bi bi-shop"></i>Eixos Creativa</p><p><i class="bi bi-person-fill"></i>Designer and (sometimes) teacher.</p><p><i class="bi bi-calendar-range"></i>Sep 2016 → Present.</p></div>				
 			</div><div class="item">
 				<h3>Escola Massana - GAAD</h3>
