--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <title>Error 404</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-<link href="https://drnlab.net/style.css" rel="stylesheet"/>
+<link href="/style.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="container">
@@ -14,7 +14,8 @@
         <h1>Error 404</h1>
 		<div class="details">
 			<p><i class="bi bi-award-fill"></i>Congrats! You've found an error page.</p>
-			<p><i class="bi bi-link-45deg"></i><a href="https://drnlab.net">https://drnlab.net</a>.</p>
+			<p><i class="bi bi-house-fill"></i><a href="/">Home</a></p>
+			<!--p><i class="bi bi-journal-bookmark-fill"></i><a href="/blog">Blog</a></p-->
 		</div>
 	</div>	
 </div>
